cmake_minimum_required(VERSION 3.10)
project(ACM-Code-Library)
add_compile_options(-std=c++11)
add_compile_options(-O2)
add_compile_options(-D__LOCAL_DEBUG__)
add_compile_options(-Wall)
set(CMAKE_CXX_STANDARD 11)
add_executable(SAM String/Automaton/Suffix_Automaton.cpp)
add_executable(Trie_Graph String/Trie-Graph.cpp)
add_executable(Trie_Graph_Segment_Tree "String/Trie-Graph(SegmentTree).cpp")
add_executable(Gauss Math/Gauss.cpp)
add_executable(DBF String/Dictionary_of_Basic_Factors.cpp)